Firefox Restart Included

--- a/Reforge V1.ipynb
+++ b/Reforge V1.ipynb
@@ -90,7 +90,7 @@
     "        try:\n",
     "            intzip_code = int(zip_code)\n",
     "            if intzip_code >= 1000 and intzip_code < 3000:\n",
-    "                state.append(\"NSW\")\n",
+    "                state.append(\"New South Wales\")\n",
     "            elif (intzip_code >= 3000 and intzip_code < 4000) or (intzip_code >= 8000 and intzip_code < 9000):\n",
     "                state.append(\"Victoria\")\n",
     "            elif (intzip_code >= 4000 and intzip_code < 5000) or (intzip_code >= 9000 and intzip_code < 10000):\n",
