MongoDB and JSONData Output

--- a/TheFirestoreTool.ipynb
+++ b/TheFirestoreTool.ipynb
@@ -9,7 +9,10 @@
     "import firebase_admin\n",
     "from firebase_admin import credentials\n",
     "from firebase_admin import firestore\n",
+    "import numpy as np\n",
+    "import numpy\n",
     "import pandas as pd\n",
+    "import json\n",
     "\n",
     "cred = credentials.Certificate('key.json')\n",
     "firebase_admin.initialize_app(cred)\n",
@@ -18,7 +21,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = {\n",
+    "        u'name': u'Tims Apple Place',\n",
+    "        u'state': u'First Road, 2004 Perth',\n",
+    "        u'country': u'timsfarm.co.au'\n",
+    "    }\n",
+    "addFarm(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,14 +45,48 @@
     "    dbRef.set(data)\n",
     "\n",
     "def addFarmsFromDF(df):\n",
-    "    for i in range(0, len(df)):\n",
-    "        data = {\n",
+    "    #Example data\n",
+    "    \"\"\"data = {\n",
+    "        u'id': df.Index[i],\n",
     "        u'name': df.Name[i],\n",
     "        u'adress': df.Adress[i],\n",
-    "        u'website': df.Website[i]\n",
-    "        }\n",
-    "        \n",
+    "        u'phone': df.Phone[i],\n",
+    "        u'website': df.Website[i],\n",
+    "        u'email': df.Email[i]\n",
+    "        }\"\"\"\n",
+    "    \n",
+    "    dataItems = {\"id\": \"Index\", \"name\": \"Name\", \"adress\": \"Adress\", \"geoLocation\": \"GeoLocation\", \"phone\": \"Phone\", \"website\": \"Website\", \\\n",
+    "                \"email\": \"Email\", \"category\": \"Category\", \"cropCode\": \"Crops\", \"state\": \"state\"}\n",
+    "    for i in range(0, len(df)):\n",
+    "        data = dict()\n",
+    "        for key in dataItems.keys():\n",
+    "            value = df[dataItems[key]][i]\n",
+    "            if key == \"geoLocation\":\n",
+    "                dec = value.find(\",\")\n",
+    "                data[key] = [value[0:dec],value[dec+1:]]\n",
+    "            elif df[dataItems[key]][i] != \"\" and value != \"N/V\":\n",
+    "                # check if I need the u'id' here for example. If yes do that before dataItems[key].\n",
+    "                data[key] = value\n",
     "        addFarm(data)\n",
+    "        \n",
+    "def addFarmsToJson(df):\n",
+    "    dataItems = {\"id\": \"Index\", \"name\": \"Name\", \"adress\": \"Adress\", \"geoLocation\": \"GeoLocation\", \"phone\": \"Phone\", \"website\": \"Website\", \\\n",
+    "                \"email\": \"Email\", \"category\": \"Category\", \"cropCode\": \"Crops\", \"state\": \"state\"}\n",
+    "    \n",
+    "    array = list()\n",
+    "    for i in range(0, len(df)):\n",
+    "        data = dict()\n",
+    "        for key in dataItems.keys():\n",
+    "            value = df[dataItems[key]][i]\n",
+    "            if key == \"geoLocation\":\n",
+    "                dec = value.find(\",\")\n",
+    "                data[key] = [float(value[dec+1:]),float(value[0:dec])]\n",
+    "            elif df[dataItems[key]][i] != \"\" and value != \"N/V\":\n",
+    "                # check if I need the u'id' here for example. If yes do that before dataItems[key].\n",
+    "                data[key] = value\n",
+    "        array.append(data)\n",
+    "    with open('Data/farms.json', 'w', encoding='utf-8') as f:\n",
+    "        json.dump(array, f, ensure_ascii=False, indent=4)\n",
     "        \n",
     "def queryFarms(queryValue, queryField = u\"Name\", operator = u\"==\"):\n",
     "    docs = db.collection(u'farms').where(queryField, operator, queryValue).stream()\n",
@@ -49,46 +100,154 @@
     "    dbRef.set(data)\n",
     "        \n",
     "def addGroupsFromDF(df):\n",
-    "    for i in range(0, len(df)):\n",
+    "    df[\"id\"] = df[\"id\"].apply(lambda x: str(x))\n",
+    "    for i in range(0, len(df)): \n",
+    "        farmsIncluded = [x.strip() for x in df.farmsIncluded[i].split(',')]\n",
+    "        farmsIncluded[0] = farmsIncluded[0][1:]\n",
+    "        farmsIncluded[-1] = farmsIncluded[-1][:-1]\n",
     "        data = {\n",
-    "        u'id': df.index[i],\n",
+    "        u'id': df.id[i],\n",
     "        u'location': df.location[i],\n",
-    "        u'farmsIncluded': df.farmsIncluded[i],\n",
-    "        u'numberInGroup': df.numberInGroup[i]\n",
+    "        u'farmsIncluded': farmsIncluded,\n",
     "        }\n",
     "        \n",
-    "        addGroup(data)"
+    "        addGroup(data)\n",
+    "        \n",
+    "def addGroupsToJson(df):\n",
+    "    df[\"id\"] = df[\"id\"].apply(lambda x: str(x))\n",
+    "    array = list()\n",
+    "    for i in range(0, len(df)): \n",
+    "        farmsIncluded = [x.strip() for x in df.farmsIncluded[i].split(',')]\n",
+    "        farmsIncluded[0] = farmsIncluded[0][1:]\n",
+    "        farmsIncluded[-1] = farmsIncluded[-1][:-1]\n",
+    "        dec = df.location[i].find(\",\")\n",
+    "        data = {\n",
+    "        u'id': df.id[i],\n",
+    "        u'geoLocation': [float(df.location[i][dec+1:]),float(df.location[i][0:dec])],\n",
+    "        u'farmsIncluded': farmsIncluded,\n",
+    "        }\n",
+    "        array.append(data\n",
+    "                    )\n",
+    "    with open('Data/Groups.json', 'w', encoding='utf-8') as f:\n",
+    "        json.dump(array, f, ensure_ascii=False, indent=4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = {\n",
-    "        u'name': u'Tims Apple Place',\n",
-    "        u'state': u'First Road, 2004 Perth',\n",
-    "        u'country': u'timsfarm.co.au'\n",
-    "    }"
+    "df = pd.read_excel(\"Data/TestDataGeo.xlsx\")\n",
+    "df = df.drop(labels=\"Unnamed: 0\", axis = 1)\n",
+    "df[\"Index\"] = df[\"Index\"].apply(lambda x: str(x))\n",
+    "df[\"Crops\"] = df[\"Crops\"].apply(lambda x: str(x))\n",
+    "df = df.drop_duplicates(subset=[\"Index\"])\n",
+    "df = df.drop([df.columns[0],df.columns[1]], axis=1)\n",
+    "df = df.reset_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>Index</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Adress</th>\n",
+       "      <th>GeoLocation</th>\n",
+       "      <th>Phone</th>\n",
+       "      <th>Website</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Email</th>\n",
+       "      <th>Crops</th>\n",
+       "      <th>Source</th>\n",
+       "      <th>DateUpdated</th>\n",
+       "      <th>DateChecked</th>\n",
+       "      <th>zip</th>\n",
+       "      <th>state</th>\n",
+       "      <th>Multiple Locations</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>13</td>\n",
+       "      <td>16472</td>\n",
+       "      <td>De Bortoli Wines Hunter Valley Cellar Door</td>\n",
+       "      <td>532 Wine Country Drive, Pokolbin NSW 2320</td>\n",
+       "      <td>-32.7816668,151.3448978</td>\n",
+       "      <td>+612 4993 8800</td>\n",
+       "      <td>http://www.debortoli.com.au/</td>\n",
+       "      <td>Vineyard or Winery</td>\n",
+       "      <td>N/V</td>\n",
+       "      <td>3</td>\n",
+       "      <td>https://www.yellowpages.com.au/search/listings...</td>\n",
+       "      <td>05/05/2020</td>\n",
+       "      <td>2020-06-01</td>\n",
+       "      <td>2320</td>\n",
+       "      <td>New South Wales</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    index  Index                                        Name  \\\n",
+       "12     13  16472  De Bortoli Wines Hunter Valley Cellar Door   \n",
+       "\n",
+       "                                       Adress              GeoLocation  \\\n",
+       "12  532 Wine Country Drive, Pokolbin NSW 2320  -32.7816668,151.3448978   \n",
+       "\n",
+       "             Phone                       Website            Category Email  \\\n",
+       "12  +612 4993 8800  http://www.debortoli.com.au/  Vineyard or Winery   N/V   \n",
+       "\n",
+       "   Crops                                             Source DateUpdated  \\\n",
+       "12     3  https://www.yellowpages.com.au/search/listings...  05/05/2020   \n",
+       "\n",
+       "   DateChecked   zip            state Multiple Locations  \n",
+       "12  2020-06-01  2320  New South Wales                NaN  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df = pd.read_excel(\"Data/Data_27-04-2020.xlsx\")"
+    "df[df.Index == \"16472\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "addFarm(data)"
+    "addFarmsFromDF(df)"
    ]
   },
   {
@@ -98,6 +257,139 @@
    "outputs": [],
    "source": [
     "queryFarms(u\"Tims Apple Place\", u\"Name\", u\"==\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfGroups = pd.read_excel(\"Data/Groups.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>farmsIncluded</th>\n",
+       "      <th>id</th>\n",
+       "      <th>location</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>[16870, 16873, 16875, 16877, 16880, 16887, 168...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-32.90312568717949,115.65298894358973</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>[16869, 16870, 16871, 16873, 16874, 16875, 168...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-33.44937914464286,116.1302205392857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>[16869, 16871, 16874, 16878, 16882, 16884, 168...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>-34.702548841176466,117.22504596470588</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>[17149, 17159, 17248, 17249, 17308, 17311]</td>\n",
+       "      <td>4</td>\n",
+       "      <td>-33.682987649999994,138.58872438333336</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>[17143, 17144, 17146, 17147, 17148, 17149, 171...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>-35.11433341654135,139.03593302706764</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0                                      farmsIncluded  id  \\\n",
+       "0           0  [16870, 16873, 16875, 16877, 16880, 16887, 168...   1   \n",
+       "1           1  [16869, 16870, 16871, 16873, 16874, 16875, 168...   2   \n",
+       "2           2  [16869, 16871, 16874, 16878, 16882, 16884, 168...   3   \n",
+       "3           3         [17149, 17159, 17248, 17249, 17308, 17311]   4   \n",
+       "4           4  [17143, 17144, 17146, 17147, 17148, 17149, 171...   5   \n",
+       "\n",
+       "                                 location  \n",
+       "0   -32.90312568717949,115.65298894358973  \n",
+       "1    -33.44937914464286,116.1302205392857  \n",
+       "2  -34.702548841176466,117.22504596470588  \n",
+       "3  -33.682987649999994,138.58872438333336  \n",
+       "4   -35.11433341654135,139.03593302706764  "
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfGroups.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "addGroupsFromDF(dfGroups)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "addFarmsToJson(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "addGroupsToJson(dfGroups)"
    ]
   },
   {
