Open Source Publish

--- a/MongoDB Tool.ipynb
+++ b/MongoDB Tool.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = pymongo.MongoClient(\"mongodb+srv://LightStoreV1:Maxi3828@farmifycluster-5kqvi.mongodb.net/FarmifyCluster?retryWrites=true&w=majority\")\n",
+    "client = pymongo.MongoClient(\"mongodb+srv://LighXXXXXXXXycluster-5XXXXter?retryWritXXXjority\")\n",
     "db = client.Farmify"
    ]
   },
