--- a/Archive/MapsAPI.ipynb
+++ b/Archive/MapsAPI.ipynb
@@ -16,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gmaps = googlemaps.Client(key='AIzaSyDRONlJD5c6oTaAR7ja7ea2LwfficV5BKA')"
+    "gmaps = googlemaps.Client(key='AIza*******ic******KA')"
    ]
   },
   {
