--- a/MongoDB Tool.ipynb
+++ b/MongoDB Tool.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = pymongo.MongoClient(\"mongodb+srv://LighXXXXXXXXycluster-5XXXXter?retryWritXXXjority\")\n",
+    "client = pymongo.MongoClient(\"mongodb+srv://L**hX**ority\")\n",
     "db = client.Farmify"
    ]
   },
