--- a/Reforge V1.ipynb
+++ b/Reforge V1.ipynb
@@ -271,7 +271,7 @@
     "from opencage.geocoder import OpenCageGeocode\n",
     "from pprint import pprint\n",
     "\n",
-    "key = 'd066a4fbf9964946af519566f421efbb'\n",
+    "key = 'd223aasd************21efbb'\n",
     "geocoder = OpenCageGeocode(key)\n",
     "\n",
     "df = pd.read_excel(\"Data/TestDataGeo.xlsx\")\n",
